--- a/src/main/resources/org/oop2023/css/dictionary.css
+++ b/src/main/resources/org/oop2023/css/dictionary.css
@@ -40,3 +40,11 @@
     -fx-fill: #008000; 
     -fx-font-weight: bold;
 }
+
+.rounded-corner {
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
+    -fx-border-color: #000000; 
+    -fx-border-width: 1; 
+    -fx-background-color: #ffffff;
+}
