--- a/src/main/resources/org/oop2023/css/translate.css
+++ b/src/main/resources/org/oop2023/css/translate.css
@@ -8,3 +8,11 @@
     -fx-scale-x: 1.1;
     -fx-scale-y: 1.1;
 }
+
+.rounded-corner {
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
+    -fx-border-color: #000000; 
+    -fx-border-width: 1; 
+    -fx-background-color: #ffffff;
+}
