--- a/src/main/resources/org/oop2023/fxml/Translate.fxml
+++ b/src/main/resources/org/oop2023/fxml/Translate.fxml
@@ -20,7 +20,7 @@
       </ImageView>
       <TextArea fx:id="textField1" layoutX="260.0" layoutY="220.0" onKeyPressed="#textField1OnKeyPressed" prefHeight="200.0" prefWidth="250.0" />
       <TextArea fx:id="textField2" layoutX="580.0" layoutY="220.0" prefHeight="200.0" prefWidth="250.0" />
-      <Button fx:id="swapButton" layoutX="523.0" layoutY="298.0" mnemonicParsing="false" onMouseClicked="#swapButtonOnMouseClicked">
+      <!-- <Button fx:id="swapButton" layoutX="523.0" layoutY="298.0" mnemonicParsing="false" onMouseClicked="#swapButtonOnMouseClicked">
          <graphic>
             <ImageView fitHeight="30.0" fitWidth="30.0">
                <image>
@@ -28,7 +28,7 @@
                </image>
             </ImageView>
          </graphic>
-      </Button>
+      </Button> -->
       <Button fx:id="speaker2" layoutX="780.0" layoutY="420.0" mnemonicParsing="false" onMouseClicked="#speaker2OnMouseClicked">
          <graphic>
             <ImageView fitHeight="30.0" fitWidth="30.0">
