--- a/src/main/resources/org/oop2023/css/dictionary.css
+++ b/src/main/resources/org/oop2023/css/dictionary.css
@@ -1,6 +1,7 @@
 .custom-icon {
     -fx-effect: dropshadow(three-pass-box, #3498db, 10, 0, 0, 0);
     -fx-transition: all 0.2s;
+    -fx-cursor: hand;
 }
 
 .custom-icon:hover {
@@ -12,11 +13,19 @@
 .search-box {
     -fx-padding: 5;
     -fx-spacing: 5;
+    fx-font-size: 14;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1;
+    -fx-border-radius: 5;
 }
 
 .text-field {
     -fx-pref-width: 400;
     -fx-font-size: 14;
+    -fx-background-color: #fff;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1;
+    -fx-border-radius: 5;
 }
 
 .search-button {
