--- a/src/main/resources/org/oop2023/css/result.css
+++ b/src/main/resources/org/oop2023/css/result.css
@@ -10,24 +10,24 @@
     -fx-scale-y: 1.1;
 }
 
-.rounded-corner {
-    -fx-border-radius: 5;
-    -fx-background-radius: 5;
-    -fx-border-color: #000000; 
-    -fx-border-width: 1; 
-    -fx-background-color: #ffffff;
-}
-
-.micro1, .micro2, .speaker1, .speaker2, .swap {
+.reload-button {
     -fx-background-size: cover;
     -fx-background-position: center;
     -fx-background-repeat: no-repeat;
     -fx-padding: 0;
-    -fx-min-width: 47; 
-    -fx-min-height: 39;
+    -fx-min-width: 50; 
+    -fx-min-height: 50;
+    -fx-background-radius: 50;
     -fx-cursor: hand;
 }
 
-.image-button:hover {
+.reload-button:hover {
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 5, 0, 0, 0);
+}
+
+.score-field {
+    -fx-background-color: transparent;
+    -fx-background-insets: 0;
+    -fx-font-size: 20;
+    -fx-text-fill: #008000;
 }
