--- a/src/main/resources/org/oop2023/fxml/Dictionary.fxml
+++ b/src/main/resources/org/oop2023/fxml/Dictionary.fxml
@@ -13,12 +13,27 @@
    <children>
       <ImageView fitHeight="720.0" fitWidth="1080.0">
          <image>
-            <Image url="@../images/Dictionary/background-5.png" />
+            <Image url="@../images/Dictionary/background-6.png" />
          </image>
       </ImageView>
       <ImageView fx:id="home" fitHeight="60.0" fitWidth="60.0" layoutX="20.0" layoutY="20.0" onMouseClicked="#homeOnMouseClicked" styleClass="custom-icon">
          <image>
             <Image url="@../images/Dictionary/house.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="112.0" fitWidth="200.0" layoutX="57.0" layoutY="225.0">
+         <image>
+            <Image url="@../images/Items/notebook.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="112.0" fitWidth="200.0" layoutX="103.0" layoutY="393.0">
+         <image>
+            <Image url="@../images/Items/books.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="168.0" fitWidth="300.0" layoutX="754.0" layoutY="257.0">
+         <image>
+            <Image url="@../images/Items/book_country.png" />
          </image>
       </ImageView>
       <TextField fx:id="searchField" layoutX="346.0" layoutY="207.0" onKeyPressed="#searchFieldOnKeyPressed" prefHeight="30.0" prefWidth="410.0">
@@ -37,6 +52,15 @@
             <ImageView fitHeight="21.0" fitWidth="20.0" styleClass="search-button">
                <image>
                   <Image url="@../images/Dictionary/search.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button fx:id="microButton" layoutX="673.0" layoutY="207.0" mnemonicParsing="false" onMouseClicked="#microOnMouseClicked">
+         <graphic>
+            <ImageView fitHeight="21.0" fitWidth="20.0">
+               <image>
+                  <Image url="@../images/Dictionary/microphone.png" />
                </image>
             </ImageView>
          </graphic>
