--- a/src/main/resources/org/oop2023/css/dictionary.css
+++ b/src/main/resources/org/oop2023/css/dictionary.css
@@ -20,7 +20,7 @@
 }
 
 .text-field {
-    -fx-pref-width: 400;
+    -fx-pref-width: 300;
     -fx-font-size: 14;
     -fx-background-color: #fff;
     -fx-border-color: #ccc;
@@ -56,4 +56,8 @@
     -fx-border-color: #000000; 
     -fx-border-width: 1; 
     -fx-background-color: #ffffff;
+}
+
+.button {
+    -fx-cursor: hand;
 }
