--- a/src/main/resources/org/oop2023/css/result.css
+++ b/src/main/resources/org/oop2023/css/result.css
@@ -29,5 +29,5 @@
     -fx-background-color: transparent;
     -fx-background-insets: 0;
     -fx-font-size: 20;
-    -fx-text-fill: #008000;
+    -fx-text-fill: #FF9300;
 }
