--- a/src/main/resources/org/oop2023/fxml/PracticeResult.fxml
+++ b/src/main/resources/org/oop2023/fxml/PracticeResult.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/result.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.oop2023.controller.ResultController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/result.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.oop2023.controller.PracticeResultController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1080.0">
          <image>
@@ -27,6 +27,6 @@
             <Image url="@../images/Result/house.png" />
          </image>
       </ImageView>
-      <TextField fx:id="scoreField" editable="false" layoutX="460.0" layoutY="292.0" prefHeight="71.0" prefWidth="185.0" styleClass="score-field" />
+      <TextField fx:id="scoreField" editable="false" focusTraversable="false" layoutX="460.0" layoutY="292.0" prefHeight="71.0" prefWidth="185.0" styleClass="score-field" />
    </children>
 </Pane>
