--- a/src/main/resources/org/oop2023/css/dictionary.css
+++ b/src/main/resources/org/oop2023/css/dictionary.css
@@ -19,8 +19,16 @@
     -fx-border-radius: 5;
 }
 
-.text-field {
+.search-field {
     -fx-pref-width: 300;
+    -fx-font-size: 14;
+    -fx-background-color: #fff;
+    -fx-border-color: #ccc;
+    -fx-border-width: 1;
+    -fx-border-radius: 5;
+}
+
+.insert-field {
     -fx-font-size: 14;
     -fx-background-color: #fff;
     -fx-border-color: #ccc;
@@ -32,11 +40,19 @@
     -fx-font-size: 14;
 }
 
-.search-button {
+.search-button, .close-button, .done-button {
     -fx-transition: all 0.2s;
 }
 
-.search-button:hover {
+.close-button {
+    -fx-text-fill: #ff0000;
+}
+
+.done-button {
+    -fx-text-fill: #008000;
+}
+
+.search-button:hover, .close-button:hover, .done-button:hover {
     -fx-effect: dropshadow(three-pass-box, #3498db, 10, 0, 0, 0);
     -fx-scale-x: 1.1;
     -fx-scale-y: 1.1;
