--- a/src/main/resources/org/oop2023/css/game.css
+++ b/src/main/resources/org/oop2023/css/game.css
@@ -29,7 +29,7 @@
     -fx-background-color: #ffffffdb;
 }
 
-.time-label, .score-label {
+.time-label, .score-label, .heart-label {
     -fx-text-fill: #FF9300;
     -fx-font-size: 18px;
 }
